--- a/gb/nsc413_4.md
+++ b/gb/nsc413_4.md
@@ -1,4 +1,11 @@
 <a name="1" id="1" target="_blank">&nbsp;</a> <span id="1">&nbsp;</span><table border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/asdfghy6/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/asdfghy6/1/master/t/djy/1.jpg" title="大纪元"></a><a href="https://github.com/asdfghy6/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/asdfghy6/1/master/t/djy/3.jpg" title="国际新闻"></a><a href="https://github.com/asdfghy6/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/asdfghy6/1/master/t/djy/4.jpg" title="大陆新闻"></a><a href="https://github.com/asdfghy6/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/asdfghy6/1/master/t/djy/5.jpg" title="评论"></a><a href="https://github.com/asdfghy6/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/asdfghy6/1/master/t/djy/6.jpg" title="文化"></a><a href="https://github.com/asdfghy6/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/asdfghy6/1/master/t/djy/7.jpg" title="生活"></a><a href="https://github.com/asdfghy6/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/asdfghy6/1/master/t/djy/8.jpg" title="娱乐"></a><a href="https://github.com/asdfghy6/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/asdfghy6/1/master/t/djy/9.jpg" title="健康"><a href="https://www.youlucky.com"><img src="https://raw.githubusercontent.com/asdfghy6/1/master/t/djy/10.jpg" title="购物"></a><a href="https://www.supportepoch.org/donation?utm_medium=epochtimes&utm_source=referral&utm_campaign=donate_button_djyhomepage"><img src="https://raw.githubusercontent.com/asdfghy6/1/master/t/djy/12.jpg" title="捐款"></a></td></tr><tr><td colspan="2" VALIGN=TOP><p><a href="https://git.io/fjHxp" rel="nofollow">大纪元</a> | <a href="https://git.io/fjHxh" rel="nofollow">动态网</a> | <a href="https://git.io/fjHpv" rel="nofollow">神州</a> | <a href="https://git.io/fjHpJ" rel="nofollow">退党</a> | <a href="https://git.io/fjHpU" rel="nofollow">九评</a> | <a href="https://git.io/fjHpT" rel="nofollow">网门</a> | <a href="https://git.io/fjHpk" rel="nofollow">神韵</a> | <a href="https://git.io/fjHpI" rel="nofollow">新纪元</a> | <a href="https://git.io/fjHpL" rel="nofollow">看中国</a> | <a href="https://git.io/fjHpt" rel="nofollow">明慧网</a> | <a href="https://git.io/fjHpq" rel="nofollow">明慧十方</a> | <a href="https://git.io/fj9lQ" rel="nofollow">明慧焦点</a> | <a href="https://git.io/fjHpm" rel="nofollow">希望之声</a> | <a href="https://git.io/fjHpY" rel="nofollow">漫谈党文化</a ></p><p><a href="https://git.io/fjHpO" rel="nofollow">新唐人</a> | <a href="https://git.io/fjHps" rel="nofollow">亚太台</a> | <a href="https://git.io/fjHpG" rel="nofollow">直播</a> | <a href="https://git.io/fj9lp" rel="nofollow">传奇</a> | <a href="https://git.io/fj9lX" rel="nofollow">神话</a> | <a href="https://git.io/fjHpZ" rel="nofollow">人生</a> | <a href="https://git.io/fjFNJ" rel="nofollow">伪火</a > | <a href="https://git.io/fjHpc" rel="nofollow">真相片</a> | <a href="https://git.io/fj9lK" rel="nofollow">藏字石</a> | <a href="https://git.io/fj9l5" rel="nofollow">短视频</a> | <a href="https://git.io/fjHpW" rel="nofollow">告诉未来</a > | <a href="https://git.io/fjHpl" rel="nofollow">终级目的</a> | <a href="https://git.io/fj9lM" rel="nofollow">中共活摘</a > | <a href="https://git.io/fjHp4" rel="nofollow">风雨天地行</a></p></td></tr><tr><td width="707"><h3><p><strong>大陆新闻</strong></p></h3></td><td VALIGN=TOP rowspan=50><a href="https://git.io/fj9l0" target="_blank"><img width="130" src="https://raw.githubusercontent.com/asdfghy6/djy/master/gb/130/gudianwu.jpg" title="神韵古典舞技巧表演" alt="神韵古典舞技巧表演"></a><br><a href="https://git.io/fj9la" target="_blank"><img width="130" src="https://raw.githubusercontent.com/asdfghy6/djy/master/gb/130/9ping.jpg" title="九评共产党" alt="九评共产党"></a><br><a href="https://git.io/fj9lr" target="_blank"><img width="130" src="https://raw.githubusercontent.com/asdfghy6/djy/master/gb/130/communism.jpg" title="共产主义终极目的" alt="共产主义终极目的"></a><br><a href="https://git.io/fjFNJ" target="_blank"><img width="130" src="https://raw.githubusercontent.com/asdfghy6/djy/master/gb/130/weihuo.jpg" title="中共的伪火骗局" alt="中共的伪火骗局"></a><br><a href="https://git.io/fj9lK" target="_blank"><img width="130" src="https://raw.githubusercontent.com/asdfghy6/djy/master/gb/130/changzhi.jpg" title="古今奇观-藏字石" alt="古今奇观-藏字石"></a><br><a href="https://git.io/fj9lP" target="_blank"><img width="130" src="https://raw.githubusercontent.com/asdfghy6/djy/master/gb/130/tianan.jpg" title="通往天安门的旅程" alt="通往天安门的旅程"></a><br><a href="https://git.io/fj9lX" target="_blank"><img width="130" src="https://raw.githubusercontent.com/asdfghy6/djy/master/gb/130/weilai.jpg" title="未来人的神话" alt="未来人的神话"></a><br><a href="https://git.io/fj9l1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/asdfghy6/djy/master/gb/130/ji-zy.jpg" title="中共罪恶的活摘" alt="中共罪恶的活摘"></a><br><a href="https://git.io/fj9lM" target="_blank"><img width="130" src="https://raw.githubusercontent.com/asdfghy6/djy/master/gb/130/huozhai.jpg" title="铁证如山" alt="铁证如山"></a><br><a href="https://git.io/fj9lD" target="_blank"><img width="130" src="https://raw.githubusercontent.com/asdfghy6/djy/master/gb/130/4ke.jpg" title="一家四口死于中共暴政" alt="一家四口死于中共暴政"></a><br><a href="https://git.io/fj9ly" target="_blank"><img width="130" src="https://raw.githubusercontent.com/asdfghy6/djy/master/gb/130/jie-di.jpg" title="─弟妹相继死于中共迫害" alt="─弟妹相继死于中共迫害"></a><br><a href="https://git.io/fj9lS" target="_blank"><img width="130" src="https://raw.githubusercontent.com/asdfghy6/djy/master/gb/130/ma-sj.jpg" title="她们许多已经被中共迫害至死" alt="她们许多已经被中共迫害至死"></a><br><a href="https://git.io/fj9l9" target="_blank"><img width="130" src="https://raw.githubusercontent.com/asdfghy6/djy/master/gb/130/shuan-cxl.jpg" title="双城血泪" alt="双城血泪"></a><br><a href="https://git.io/fj9lH" target="_blank"><img width="130" src="https://raw.githubusercontent.com/asdfghy6/djy/master/gb/130/wu-zbh.jpg" title="震撼人心的无罪辩护" alt="震撼人心的无罪辩护"></a><br><a href="https://git.io/fj9lQ" target="_blank"><img width="130" src="https://raw.githubusercontent.com/asdfghy6/djy/master/gb/130/6c10-720.jpg" title="从610到720" alt="从610到720"></a><br><a href="https://git.io/fj9l7" target="_blank"><img width="130" src="https://raw.githubusercontent.com/asdfghy6/djy/master/gb/130/xian-z.jpg" title="中共官员的选择" alt="中共官员的选择"></a><br><a href="https://git.io/fj9l5" target="_blank"><img width="130" src="https://raw.githubusercontent.com/asdfghy6/djy/master/gb/130/1400l.jpg" title="剖析1400例" alt="剖析1400例"></a><br><a href="https://git.io/fj9lb" target="_blank"><img width="130" src="https://raw.githubusercontent.com/asdfghy6/djy/master/gb/130/425.jpg" title="万人上访真相" alt="万人上访真相"></a><br><a href="https://git.io/fj9lN" target="_blank"><img width="130" src="https://raw.githubusercontent.com/asdfghy6/djy/master/gb/130/qing-h.jpg" title="被中共迫害的清华学子" alt="被中共迫害的清华学子"></a><br><a href="https://git.io/fj9lx" target="_blank"><img width="130" src="https://raw.githubusercontent.com/asdfghy6/djy/master/gb/130/jian-z513.jpg" title="见证513" alt="见证513"></a><br><a href="https://git.io/fj9lp" target="_blank"><img width="130" src="https://raw.githubusercontent.com/asdfghy6/djy/master/gb/130/gongfu.jpg" title="功夫 寻道" alt="功夫 寻道"></a><br><a href="https://git.io/fj9lh" target="_blank"><img width="130" src="https://raw.githubusercontent.com/asdfghy6/djy/master/gb/130/guangguimian.jpg" title="歌唱家人生奇迹" alt="歌唱家人生奇迹"></a><br><a href="https://git.io/fj9lj" target="_blank"><img width="130" src="https://raw.githubusercontent.com/asdfghy6/djy/master/gb/130/ming-jjy.jpg" title="名校精英的选择" alt="名校精英的选择"></a><br><a href="https://git.io/fj98e" target="_blank"><img width="130" src="https://raw.githubusercontent.com/asdfghy6/djy/master/gb/130/yin-lj.jpg" title="音乐之家的故事" alt="音乐之家的故事"></a><br><a href="https://git.io/fj98v" target="_blank"><img width="130" src="https://raw.githubusercontent.com/asdfghy6/djy/master/gb/130/ming-hsf.jpg" title="平凡中的不平凡" alt="平凡中的不平凡"></a><br><a href="https://github.com/asdfghy6/yh/blob/master/README.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/asdfghy6/djy/master/gb/130/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/asdfghy6/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/asdfghy6/djy/master/gb/130/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/asdfghy6/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/asdfghy6/djy/master/gb/130/huo-z3.jpg" title="警卫目击中共活摘"  alt="警卫目击中共活摘"></a><br><a href="https://github.com/asdfghy6/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/asdfghy6/djy/master/gb/130/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/asdfghy6/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/asdfghy6/djy/master/gb/130/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/asdfghy6/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/asdfghy6/djy/master/gb/130/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/asdfghy6/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/asdfghy6/djy/master/gb/130/st1.jpg" title="关注3亿人三退"  alt="关注3亿人三退"></a><br><a href="https://github.com/asdfghy6/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/asdfghy6/djy/master/gb/130/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/asdfghy6/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/asdfghy6/djy/master/gb/130/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/asdfghy6/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/asdfghy6/djy/master/gb/130/sj1.jpg" title="303万人举报江泽民"  alt="303万人举报江泽民"></a><br><a href="https://github.com/asdfghy6/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/asdfghy6/djy/master/gb/130/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/asdfghy6/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/asdfghy6/djy/master/gb/130/liangan.jpg" title="海峡两岸的强烈反差"  alt="海峡两岸的强烈反差"></a><br><a href="https://github.com/asdfghy6/djy/blob/master/gb/15/5/5/n4427238.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/asdfghy6/djy/master/gb/130/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/asdfghy6/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/asdfghy6/djy/master/gb/130/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/asdfghy6/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/asdfghy6/djy/master/gb/130/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/asdfghy6/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/asdfghy6/djy/master/gb/130/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/asdfghy6/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/asdfghy6/djy/master/gb/130/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/asdfghy6/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/asdfghy6/djy/master/gb/130/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/asdfghy6/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/asdfghy6/djy/master/gb/130/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/asdfghy6/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/asdfghy6/djy/master/gb/130/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/asdfghy6/djy/blob/master/gb/9/10/15/n2689419.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/asdfghy6/djy/master/gb/130/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/asdfghy6/fq/blob/master/README.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/asdfghy6/djy/master/gb/130/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr>
+<tr><td><h3><a href="https://github.com/asdfghy6/djy/blob/master/gb/19/9/24/n11542595.md#1" target="_blank">叶选平去世 广东官场“客家帮”终结</a><br></h3><a href="https://github.com/asdfghy6/djy/blob/master/gb/19/9/24/n11542595.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/09/27-02_m1-1-600x400-1-1-150x120.jpg" align ="left"></a>中共已故元老叶剑英之子叶选平去世，外界指，这标志着广东官场“客家帮”崩落。此前，大批“客家帮”官员落马，包括前广州市委书记万庆良等“客家帮”典型成员。
+
+叶选平9月17月在广州去世，终年94岁。23日，其遗体告别式在广州举行。
+
+中共官场历来帮派林立。广东官场更是派系严重，可分为广府帮（即粤语帮）、梅州客家帮、潮汕帮和外来帮四大派系。其中又以1949.........<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年09月24日 4:18 PM							</td></tr>
+<tr><td><h3><a href="https://github.com/asdfghy6/djy/blob/master/gb/19/9/24/n11542704.md#1" target="_blank">涉贪污受贿 呼和浩特中院前院长被双开</a><br></h3><a href="https://github.com/asdfghy6/djy/blob/master/gb/19/9/24/n11542704.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/09/dongbinghui-Web-Banner-1200x800-v3-150x120.jpg" align ="left"></a>近期中共内蒙古政法系统官员频频出事。中共内蒙古呼和浩特市中级法院前党组书记、院长董秉惠日前被“双开”并移送司法。董秉惠被指涉贪污，拿司法权做交易，受贿等。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年09月24日 3:22 PM							</td></tr>
+<tr><td><h3><a href="https://github.com/asdfghy6/djy/blob/master/gb/19/9/24/n11542431.md#1" target="_blank">金价不断上涨 中国大妈缘何不跟</a><br></h3><a href="https://github.com/asdfghy6/djy/blob/master/gb/19/9/24/n11542431.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2018/10/GettyImages-56545309-150x120.jpg" align ="left"></a>国际黄金价格从六月份开始上涨，伦敦金每盎司九月份更是涨到了1557.10美元，创下2013年5月以来的新高。但是，2013年疯狂购买黄金的中国大妈们此时却没有跟风购买。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年09月24日 3:11 PM							</td></tr>
 <tr><td><h3><a href="https://github.com/asdfghy6/djy/blob/master/gb/19/9/24/n11542425.md#1" target="_blank">十一期间在北京如厕采实名制 民众挞伐</a><br></h3><a href="https://github.com/asdfghy6/djy/blob/master/gb/19/9/24/n11542425.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2018/06/GettyImages-655929922-1-150x120.jpg" align ="left"></a>临近10月1日，中共草木皆兵，路过北京车站100米安检3次，近日又出台上公共厕所携带身份证登记的规定。再次掀起一波挞伐声浪。“吓成这样还阅什么兵啊！”“五千年中华史上最荒谬、最黑暗、最无耻的时刻！”......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年09月24日 2:59 PM							</td></tr>
 <tr><td><h3><a href="https://github.com/asdfghy6/djy/blob/master/gb/19/9/24/n11542748.md#1" target="_blank">哈尔滨政协主席姜国文落马</a><br></h3><a href="https://github.com/asdfghy6/djy/blob/master/gb/19/9/24/n11542748.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/09/faace5359af016f444449c9d89df3633-150x120.jpg" align ="left"></a>9月24日，中共中纪委国家监委消息称，哈尔滨市政协主席姜国文被调查。姜国文曾任10年纪委书记。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年09月24日 2:43 PM							</td></tr>
 <tr><td><h3><a href="https://github.com/asdfghy6/djy/blob/master/gb/19/9/24/n11542705.md#1" target="_blank">欧盟商会：中共若放任国企膨胀 经济将停滞</a><br></h3><a href="https://github.com/asdfghy6/djy/blob/master/gb/19/9/24/n11542705.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/09/GettyImages-129516167-150x120.jpg" align ="left"></a>欧洲一个主要商会组织在周二（9月24日）警告说，中共如果任由国营企业不断膨胀而不加以控制，那将会导致中国停滞不前。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年09月24日 2:21 PM							</td></tr>
@@ -23,9 +30,6 @@
 <tr><td><h3><a href="https://github.com/asdfghy6/djy/blob/master/gb/19/9/23/n11541499.md#1" target="_blank">遭酷刑及面临被关再教育营 新疆女商人逃亡</a><br></h3><a href="https://github.com/asdfghy6/djy/blob/master/gb/19/9/23/n11541499.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/02/9ceecbe5-995f-442d-84b4-8a23383ac9ac-1_meitu_2-600x400-150x120.jpg" align ="left"></a>去年流亡到哈萨克斯坦的新疆哈萨克族商人喀衣夏·阿汗近日公开其被迫逃亡的经历，并披露一名少女曾在新疆“再教育营”遭强暴而怀孕生子。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年09月24日 4:13 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/asdfghy6/djy/blob/master/gb/19/9/23/n11541125.md#1" target="_blank">中国钢铁产能过剩 唐银钢铁总经理被拘</a><br></h3><a href="https://github.com/asdfghy6/djy/blob/master/gb/19/9/23/n11541125.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/09/GettyImages-960733324-150x120.jpg" align ="left"></a>尽管钢铁需求放缓，北京当局强制要求减产，但中国供应商仍在以前所未有的速度提高产量，国内产能过剩的问题迫在眉睫，供过于求的隐忧可能将再次蔓延全国。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年09月24日 3:47 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/asdfghy6/djy/blob/master/gb/19/9/23/n11541235.md#1" target="_blank">河北秦皇岛用假批文拆迁 官方在掩盖什么？</a><br></h3><a href="https://github.com/asdfghy6/djy/blob/master/gb/19/9/23/n11541235.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/09/weMFpMeu-150x120.jpg" align ="left"></a>河北秦皇岛的前进村位于大汤河向西大约二百米，地理位置优越。早在2002年被当地政府卖给了北京四通房地产公司，在此建成高端的小区和别墅出售。然而，被拆迁的前进村则是另一番景象。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年09月24日 3:40 AM							</td></tr>
-<tr><td><h3><a href="https://github.com/asdfghy6/djy/blob/master/gb/19/9/23/n11540879.md#1" target="_blank">华为5G新手机被称昂贵砖头 法媒评中国经济</a><br></h3><a href="https://github.com/asdfghy6/djy/blob/master/gb/19/9/23/n11540879.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/08/70c86c3cc8de46f0569a8c46e159efce-150x120.jpg" align ="left"></a>据《法广》近日的法国报纸摘要综合，法国主流媒体对华为事件、中国在法国投资以及中国大陆目前的经济状况尤为关注。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年09月24日 3:25 AM							</td></tr>
-<tr><td><h3><a href="https://github.com/asdfghy6/djy/blob/master/gb/19/9/23/n11541496.md#1" target="_blank">促宗教自由 川普在纽约联合国总部演讲全文</a><br></h3><a href="https://github.com/asdfghy6/djy/blob/master/gb/19/9/23/n11541496.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/09/000_1KK0WB-150x120.jpg" align ="left"></a>周一（9月23日）上午11点半，美国总统川普（特朗普）在纽约联合国总部发表宗教自由主题演讲。他表示，世界上约有80%的人口生活在宗教自由权利被侵蚀的国家，而美国将永远为各地宗教迫害受害者发声。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年09月24日 3:13 AM							</td></tr>
-<tr><td><h3><a href="https://github.com/asdfghy6/djy/blob/master/gb/19/9/23/n11541464.md#1" target="_blank">快讯：孟晚舟温哥华出庭 律师求阅被捕文件</a><br></h3><a href="https://github.com/asdfghy6/djy/blob/master/gb/19/9/23/n11541464.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/09/21809469-150x120.jpg" align ="left"></a>2019年9月23日星期一温哥华，华为首席财务官孟晚舟和丈夫刘晓棕离开家门参加法庭听证会。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年09月24日 2:51 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/asdfghy6/djy/blob/master/gb/19/9/24/n11542450.md#1" target="_blank">10.1前中共常委参观展览 卸任高层缺席</a><br></h3>9月23日，中共为篡政70周年庆典搞的展览在北京开幕，习近平等六名中共政治局常委前去参观，中共卸任高层缺席。中共篡政50、60周年的展览上，卸任的中南海高层均现身。
 
 习近平在讲话中引用毛泽东的词句“而今迈步从头越”，被外界视为是暗示中共当前面临形势凶险。
